k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthnx

spec:
  replicas: 2

  selector:
    matchLabels:
      app: healthnx

  template:
    metadata:
      labels:
        app: healthnx

    spec:
      containers:
      - name: healthnx

        image: YOUR_ECR_IMAGE

        ports:
        - containerPort: 3000
