k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: healthnx-service

spec:
  selector:
    app: healthnx

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
