k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: healthnx-ingress

  annotations:
    kubernetes.io/ingress.class: alb

spec:
  rules:
  - host: healthnx.com

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: healthnx-service
            port:
              number: 80
